@@ -1,3 +1,9 @@
+2005-05-22  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirread.c: Changed the code that computes 
+	stripbytecount[0] if it appears bogus to ignore if stripoffset[0] is
+	zero. This is a common case with GDAL indicating a "null" tile/strip.
+
 2005-05-17  Andrey Kiselev  <dron@remotesensing.org>
 	* tools/tiffsplit.c: Check for JPEGTables tag presence before copying.
 
